# taglib-gio

./: Makefile.am  Makefile.in  config.h.in  configure  configure.in  subdirs  taglib-gio-config.in  taglib-gio.pc.in
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
examples/: tagreader  tagreader.cpp
taglib/: Makefile.am  Makefile.in
taglib/ape/: Makefile.am  Makefile.in
taglib/flac/: Makefile.am  Makefile.in
taglib/mpc/: Makefile.am  Makefile.in
taglib/mpeg/: Makefile.am  Makefile.in
taglib/mpeg/id3v1/: Makefile.am  Makefile.in
taglib/mpeg/id3v2/: Makefile.am  Makefile.in
taglib/mpeg/id3v2/frames/: Makefile.am  Makefile.in
taglib/ogg/: Makefile.am  Makefile.in
taglib/ogg/flac/: Makefile.am  Makefile.in
taglib/ogg/vorbis/: Makefile.am  Makefile.in
taglib/toolkit/: Makefile.am  Makefile.in
